--- a/i18n/ar.toml
+++ b/i18n/ar.toml
@@ -25,7 +25,7 @@ other = "Lots of hot girls are waiting to open a chat room with just you.  Ready
 [Msg]
 other = "NEW MESSAGE!"
 [Title]
-other = "Best Dating app"
+other = "Congratulations!"
 [win]
 other = "Sign up for legal sex dates and get access to dozens of photos and videos of real women close up to you! NO AI content! You can use our app for that. Registration is fast"
 [nip]
